@@ -21,3 +21,5 @@ David Freels    david.freels@peregrine.com
 Kalle Burbeck   kalle.burbeck@idainfront.se
 
 Dirk Feufel     Dirk.Feufel@abaXX.de
+
+Kjetil JD	kjetiljd@usa.net
